--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ django-ckeditor = "~=6.5.1"
 django-crispy-forms = "~=1.14.0"
 djangorestframework = "~=3.13.0"
 whitenoise = "~=6.2.0"
+requests = "~=2.28.1"
+pydantic = "~=1.10.2"
 
 [dev-packages]
 flake8 = "~=6.0.0"
