--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ djangorestframework = "~=3.13.0"
 whitenoise = "~=6.2.0"
 requests = "~=2.28.1"
 pydantic = "~=1.10.2"
+dj-rest-auth = "~=2.1.11"
+django-allauth = "~=0.48.0"
 
 [dev-packages]
 flake8 = "~=6.0.0"
