--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ requests = "~=2.28.1"
 pydantic = "~=1.10.2"
 dj-rest-auth = "~=2.1.11"
 django-allauth = "~=0.48.0"
+drf-spectacular = "~=0.21.0"
 
 [dev-packages]
 flake8 = "~=6.0.0"
